# structbx-server

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.txt  init_envDev.sh  properties.yaml
.github/workflows/: docker.yml
cmake/: build.cmake  config.h.cmake  doxygen.cmake  find_packages.cmake  install.cmake  print_informations.cmake  source.cmake
cmake/modules/: Findlibmysqlclient.cmake
cmake_extra_modules/: Findyaml-cpp.cmake
cmake_modules/: Findnebulaatom.cmake
conf/: cert.pem.template  key.pem  properties.yaml  properties.yaml.template
docs/: Doxyfile.in
src/: backend_server.cpp  backend_server.h  function_data.h  main.cpp  server.cpp  structbi_server.cpp  structbx-server.cpp  web_server.cpp  web_server.h
src/actions/: base_action.h  forms.cpp  forms.h  forms_data.cpp  forms_data.h  spaces.cpp  spaces.h  spaces_data.cpp  spaces_data.h
src/controllers/databases/: main.cpp  main.h  users.cpp  users.h
src/controllers/forms/: columns.cpp  columns.h  data.cpp  data.h  main.cpp  main.h  permissions.cpp  permissions.h  views.cpp  views.h
src/controllers/general/: groups.cpp  groups.h  main.cpp  main.h  permissions.cpp  permissions.h  users.cpp  users.h
src/controllers/general/spaces/: main.cpp  main.h  users.cpp  users.h
src/controllers/spaces/: main.cpp  main.h  users.cpp  users.h
src/controllers/tables/: columns.cpp  columns.h  data.cpp  data.h  main.cpp  main.h  permissions.cpp  permissions.h  views.cpp  views.h
src/core/: core.cpp  core.h  handler_factory.cpp  handler_factory.h  server.cpp  server.h
src/files/: file.cpp  file.h  file_manager.cpp  file_manager.h  file_properties.cpp  file_properties.h
src/functions/: action.cpp  action.h  dashboards.cpp  dashboards.h  forms.cpp  forms.h  function.cpp  function.h  functions_manager.cpp  functions_manager.h  organizations.cpp  organizations.h  reports.cpp  reports.h  reports_graphs.cpp  reports_graphs.h  reports_parameters.cpp  spaces.cpp  spaces.h  spaces_users.cpp
src/functions/forms/: columns.cpp  columns.h  data.cpp  data.h  forms.cpp  forms.h  forms_columns.cpp  forms_columns.h  forms_data.cpp  forms_data.h  main.cpp  main.h  permissions.cpp  permissions.h
src/functions/general/: groups.cpp  groups.h  main.cpp  main.h  permissions.cpp  permissions.h  users.cpp  users.h
src/functions/general/spaces/: main.h
src/functions/organizations/: groups.cpp  groups.h  main.cpp  main.h  users.cpp  users.h
src/functions/spaces/: main.cpp  main.h  spaces.cpp  spaces.h  spaces_logo.cpp  spaces_logo.h  spaces_users.cpp  spaces_users.h  users.cpp  users.h
src/handlers/: backend_handler.cpp  backend_handler.h  custom_handler.cpp  custom_handler.h  login_handler.cpp  login_handler.h  null_handler.cpp  null_handler.h  root_handler.cpp  root_handler.h  web_handler.cpp  web_handler.h
src/http/: body.cpp  body.h  client.cpp  client.h  common_responses.cpp  common_responses.h  html_message.cpp  html_message.h  methods.cpp  methods.h  request.cpp  request.h  response_manager.cpp  response_manager.h
src/include/: backend_server.h  web_server.h
src/include/functions/: dashboards.h  forms.h  reports.h  reports_parameters.h  spaces.h  spaces_users.h
src/include/tools/: id_checker.h
src/query/: condition.cpp  condition.h  database_manager.cpp  database_manager.h  field.cpp  field.h  parameter.cpp  parameter.h  results.cpp  results.h  row.cpp  row.h
src/security/: permission.cpp  permission.h  permissions_manager.cpp  permissions_manager.h  security_verification.cpp  security_verification.h  user.cpp  user.h  users_manager.cpp  users_manager.h
src/sessions/: session.cpp  session.h  sessions_manager.cpp  sessions_manager.h
src/tools/: actions_data.cpp  actions_data.h  base64_tool.cpp  base64_tool.h  base_action.h  dvalue.cpp  dvalue.h  function_data.h  handler_connection.cpp  handler_connection.h  hmac_tool.cpp  hmac_tool.h  id_checker.cpp  id_checker.h  manage_json.cpp  manage_json.h  output_logger.cpp  output_logger.h  route.cpp  route.h  settings_manager.cpp  settings_manager.h  values_properties.cpp  values_properties.h
